project(wf3)
add_library(${PROJECT_NAME} SHARED
	addk2d.c
	bin2d.c
	bincoords.c
	binupdate.c
	calwf3/calwf3.c
	calwf3/getinfo.c
	calwf3/getnewref.c
	calwf3/getreffiles.c
	calwf3/getswitches.c
	calwf3/procccd.c
	calwf3/procir.c
	calwf3/refexist.c
	calwf3/wf3dth.c
	calwf3/wf3init.c
	calwf3/wf3member.c
	calwf3/wf3table.c
	comparenum.c
	computelimits.c
	defswitch.c
	detchip.c
	detnsegn.c
	div1d.c
	dodqi.c
	donoise.c
	dostat.c
	err.c
	fileexists.c
	findbin.c
	findroot.c
	fromlt.c
	getccdtab.c
	getcorner.c
	getgrp.c
	getkeys.c
	getlt.c
	getrefname.c
	getswitch.c
	gotfilename.c
	imghistory.c
	imgpedigree.c
	initmulti.c
	interp1d.c
	interpinfo.c
	key.c
	loadhead.c
	logprogress.c
	lowcase.c
	median.c
	mkname.c
	mkoutname.c
	mkspt.c
	mult1d.c
	multk1d.c
	multk2d.c
	omitstep.c
	parseamps.c
	prinfo.c
	razutil.c
	reffiles.c
	rowpedigree.c
	sameint.c
	spline.c
	streqic.c
	sub1d.c
	subtools.c
	tabhistory.c
	tabpedigree.c
	timestamp.c
	trim.c
	ucalver.c
	ufilename.c
	unbin2d.c
	unbinline.c
	wf32d/do2d.c
	wf32d/dodark.c
	wf32d/doflat.c
	wf32d/doflux.c
	wf32d/dophot.c
	wf32d/doshad.c
	wf32d/get2dflags.c
	#wf32d/get2dsw.c # ... what?
	wf32d/photmode.c
	wf32d/sanity2d.c
	wf32d/wf32d.c
	wf3ccd/blevdrift.c
	wf3ccd/blevfit.c
	wf3ccd/doatod.c
	wf3ccd/dobias.c
	wf3ccd/doblev.c
	wf3ccd/doccd.c
	wf3ccd/doflash.c
    wf3ccd/dofwsat.c
	wf3ccd/findblev.c
	wf3ccd/findover.c
	wf3ccd/getccdsw.c
	wf3ccd/getflags.c
	wf3ccd/sink.c
	wf3ccd/wf3ccd.c
	wf3cte/cte_dobias.c
	wf3cte/getcteflags.c
	wf3cte/getctepars.c
	wf3cte/getctesw.c
	wf3cte/wf3cte.c
	wf3hist.c
	wf3info.c
	wf3ir/blevcorr.c
	wf3ir/cridcalc.c
	wf3ir/darkcorr.c
	wf3ir/doir.c
	wf3ir/dqicorr.c
	wf3ir/flatcorr.c
	wf3ir/getirflags.c
	wf3ir/getirsw.c
	wf3ir/groupinfo.c
	wf3ir/imageio.c
	wf3ir/irhist.c
	wf3ir/math.c
	wf3ir/nlincorr.c
	wf3ir/noiscalc.c
	wf3ir/numrec.c
	wf3ir/photcalc.c
	wf3ir/pixcheck.c
	wf3ir/refdata.c
	wf3ir/resistmean.c
	wf3ir/satcheck.c
	wf3ir/statcalc.c
	wf3ir/stats.c
	wf3ir/unitcorr.c
	wf3ir/updatehdr.c
	wf3ir/wf3ir.c
	wf3ir/zoffcorr.c
	wf3ir/zsigcorr.c
	wf3rej/cr_history.c
	wf3rej/cr_mode.c
	wf3rej/cr_scaling.c
	wf3rej/piksrt.c
	wf3rej/readpar.c
	wf3rej/rej_check.c
	wf3rej/rej_command.c
	wf3rej/rej_do.c
	wf3rej/rej_init.c
	wf3rej/rej_loop.c
	wf3rej/rej_sky.c
	wf3rej/wf3rej.c
	wf3sect.c
	wf3sum/wf3sum.c
	whicherror.c
)
target_include_directories(${PROJECT_NAME}
	PUBLIC ${HSTCAL_include}
	PUBLIC ${PROJECT_NAME_INCLUDE_DIR}
	PUBLIC ${PROJECT_SOURCE_DIR}/../include
)
target_link_libraries(${PROJECT_NAME}
	PUBLIC ctegen2
	PUBLIC hstcalib
)
set_target_properties(${PROJECT_NAME}
	PROPERTIES
	OUTPUT_NAME hst${PROJECT_NAME}
)
install(TARGETS ${PROJECT_NAME}
	DESTINATION lib
)
